# dynamic_interface_openSpiel_games

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc  main.cc.save
src/assets/: Chess_plt45.png:Zone.Identifier  Chess_plt45.pngZone.Identifier  Chess_plt45.svgZone.Identifier
src/interface_graphical/: board.cc  board.h  interface_graphical.cc  interface_graphical.h  piece.h  pieceType.cc  square.h  window.cc  window.h
